Set sblibcl 3.14a-0.1 for release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-sblibcl (3.14a-0.1) UNRELEASED; urgency=low
+sblibcl (3.14a-0.1) stable; urgency=low
 
   * Cryptlib library for SBBS, which installs the library libcl.so.3.3.0
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 13 Mar 2010 16:10:18 -0400
-
+ -- Robert James Clay <jame@rocasa.us>  Thu, 03 Feb 2011 19:18:23 -0500
