Update sblibcl-315 to 0.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-sblibcl (3.15a-0.1) UNRELEASED; urgency=low
+sblibcl (3.15a-0.2) stable; urgency=low
 
   * Cryptlib library for SBBS v3.15a, which installs the library libcl.so.3.3.1
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 26 Feb 2011 00:53:23 -0500
+ -- Robert James Clay <jame@rocasa.us>  Sat, 26 Feb 2011 12:27:23 -0500
