--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-sblibcl (3.14a-0.1) stable; urgency=low
+sblibcl (3.14a-0.2) UNRELEASED; urgency=low
 
   * Cryptlib library for SBBS, which installs the library libcl.so.3.3.0
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 03 Feb 2011 19:18:23 -0500
+ -- Robert James Clay <jame@rocasa.us>  SUN, 27 Feb 2011 10:45:17 -0500
