--- a/debian/install
+++ b/debian/install
@@ -1,32 +1,34 @@
-ctrl/*	usr/share/sbbscvs/ctrl
-docs/_borders/*	usr/share/doc/sbbscvs/_borders
-docs/images/*	usr/share/doc/sbbscvs/images
-exec/*	opt/sbbscvs/exec
-exec/tone/*	opt/sbbscvs/exec/tone
-text/*	usr/share/sbbscvs/text
-node1/*	usr/share/sbbscvs/nodes/node1
-node2/*	usr/share/sbbscvs/nodes/node2
-node3/*	usr/share/sbbscvs/nodes/node3
-node4/*	usr/share/sbbscvs/nodes/node4
-text/menu/*	usr/share/sbbscvs/text/menu
-text/menu/major/*	usr/share/sbbscvs/text/menu/major
-text/menu/pcboard/*	usr/share/sbbscvs/text/menu/pcboard
-text/menu/renegade/*	usr/share/sbbscvs/text/menu/renegade
-text/menu/sdos/*	usr/share/sbbscvs/text/menu/sdos
-text/menu/simple/*	usr/share/sbbscvs/text/menu/simple
-text/menu/wildcat/*	usr/share/sbbscvs/text/menu/wildcat
-text/menu/wwiv/*	usr/share/sbbscvs/text/menu/wwiv
-web/lib/*	usr/share/sbbscvs/web/lib
-web/root/*	usr/share/sbbscvs/web/root
-web/templates/*	usr/share/sbbscvs/web/templates
-xtrn/sbj/sbj	opt/sbbscvs/xtrn/sbj
-xtrn/sbj/sbj.cfg	opt/sbbscvs/xtrn/sbj
-xtrn/sbj/sbj.doc	opt/sbbscvs/xtrn/sbj
-xtrn/sbj/sbj.msg	opt/sbbscvs/xtrn/sbj
-xtrn/sbj/sbjclean	opt/sbbscvs/xtrn/sbj
-xtrn/sbl/sbl	opt/sbbscvs/xtrn/sbl
-xtrn/sbl/sbl2smb	opt/sbbscvs/xtrn/sbl
-xtrn/sbl/sbl.cfg	opt/sbbscvs/xtrn/sbl
-xtrn/sbl/sbl.doc	opt/sbbscvs/xtrn/sbl
-xtrn/sbl/sblpack	opt/sbbscvs/xtrn/sbl
-xtrn/sbl/sysop.txt	opt/sbbscvs/xtrn/sbl
+ctrl/*	usr/share/sbbsdev/ctrl
+docs/_borders/*	usr/share/doc/sbbsdev/_borders
+docs/images/*	usr/share/doc/sbbsdev/images
+exec/*	opt/sbbsdev/exec
+exec/ircbots/*	opt/sbbsdev/exec/ircbots
+exec/load/*	opt/sbbsdev/exec/load
+exec/tone/*	opt/sbbsdev/exec/tone
+text/*	usr/share/sbbsdev/text
+node1/*	usr/share/sbbsdev/nodes/node1
+node2/*	usr/share/sbbsdev/nodes/node2
+node3/*	usr/share/sbbsdev/nodes/node3
+node4/*	usr/share/sbbsdev/nodes/node4
+text/menu/*	usr/share/sbbsdev/text/menu
+text/menu/major/*	usr/share/sbbsdev/text/menu/major
+text/menu/pcboard/*	usr/share/sbbsdev/text/menu/pcboard
+text/menu/renegade/*	usr/share/sbbsdev/text/menu/renegade
+text/menu/sdos/*	usr/share/sbbsdev/text/menu/sdos
+text/menu/simple/*	usr/share/sbbsdev/text/menu/simple
+text/menu/wildcat/*	usr/share/sbbsdev/text/menu/wildcat
+text/menu/wwiv/*	usr/share/sbbsdev/text/menu/wwiv
+web/lib/*	usr/share/sbbsdev/web/lib
+web/root/*	usr/share/sbbsdev/web/root
+web/templates/*	usr/share/sbbsdev/web/templates
+xtrn/sbj/sbj	opt/sbbsdev/xtrn/sbj
+xtrn/sbj/sbj.cfg	opt/sbbsdev/xtrn/sbj
+xtrn/sbj/sbj.doc	opt/sbbsdev/xtrn/sbj
+xtrn/sbj/sbj.msg	opt/sbbsdev/xtrn/sbj
+xtrn/sbj/sbjclean	opt/sbbsdev/xtrn/sbj
+xtrn/sbl/sbl	opt/sbbsdev/xtrn/sbl
+xtrn/sbl/sbl2smb	opt/sbbsdev/xtrn/sbl
+xtrn/sbl/sbl.cfg	opt/sbbsdev/xtrn/sbl
+xtrn/sbl/sbl.doc	opt/sbbsdev/xtrn/sbl
+xtrn/sbl/sblpack	opt/sbbsdev/xtrn/sbl
+xtrn/sbl/sysop.txt	opt/sbbsdev/xtrn/sbl
