--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-sblibcl (3.14a-0.2) UNRELEASED; urgency=low
+sblibs (3.14a-0.1) UNRELEASED; urgency=low
 
-  * Cryptlib library for SBBS, which installs the library libcl.so.3.3.0
+  * Precompiled libraries for Synchronet BBS
 
- -- Robert James Clay <jame@rocasa.us>  SUN, 27 Feb 2011 10:45:17 -0500
+ -- Robert James Clay <jame@rocasa.us>  Wed,  2 Mar 2011 16:15:17 -0500
