Move old debian dev dir to prj/sbbscvs.

--- a/prj/sbbscvs/debian/sbbscvs.1
+++ b/prj/sbbscvs/debian/sbbscvs.1
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH sbbsdev 1 "February 27, 2011"
+.TH sbbscvs 1 "March 5, 2011"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -16,7 +16,7 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-Synchronet BBS Software from Development
+Synchronet BBS Software from the CVS Reposistory
 .SH DESCRIPTION
 This manual page documents briefly the development version of the 
 .B Synchronet
