--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sbbsdev (110311+1) UNRELEASED; urgency=low
+
+  * Further changes for the sbbsdev package=
+
+ -- Robert James Clay <jame@rocasa.us>  Fri, 11 Mar 2011 18:40:04 -0500
+
 sbbsdev (110311) stable; urgency=low
 
   * Initial Release of sbbsdev package.
